--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,105 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
+
+@media (min-width: 1350px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl {
+      max-width: 1300px !important;
+  }
+}
+
+.app-container {
+  .header-container {
+    z-index: 10;
+    position: sticky;
+    .navbar {
+      background-color: transparent !important;
+      padding: 16px 0;
+        .navbar-nav {
+          display: flex;
+          align-items: center;
+          font-size: 15px;
+          gap: 10px;
+          .nav-link {
+            &.active {
+              color: red;
+            }
+          }
+          .signup-btn {
+            padding: 0 15px;
+            height: 40px;
+            color: #ffffff;
+            background-color: #3e3040;
+            font-weight: 600;
+            border: none;
+            border-radius: 8px;
+            transition: all ease-in-out 0.5s;
+            &:hover {
+              border-radius: 14px;
+              background-color: rgba(62, 48, 64, 0.8);
+            }
+          } 
+          .login-btn{ 
+            height: 40px;
+            padding: 0 15px;
+            color: #3e3040;
+            background-color: transparent;
+            font-weight: 600;
+            border: none;
+            border-radius: 8px;
+            transition: all ease-in-out 0.5s;
+            &:hover {
+              color: #a25fba;
+            }
+          }
+        }
+      }
+    }
+  }
+  .main-container{ 
+    .app-content {
+      .homepage-container {
+        .video-container {
+          position: fixed;
+          width: 100vw;
+          bottom: 0;
+          z-index: -1;
+          object-fit: cover;
+        }
+      }
+      .homepage-content {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 50%; 
+        padding: 110px;
+        gap: 25px;
+        .title-1{
+          font-size: 50px;
+          font-weight: 600;
+        }
+        .title-2{
+          font-size: 22px;
+        }
+        .btn-1{
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          color: #ffffff;
+          background-color: #3e3040;
+          padding: 10px 26px;
+          border: none;
+          border-radius: 8px;
+          transition: all ease-in-out 0.5s;
+          &:hover {
+            border-radius: 14px;
+            background-color: rgba(62, 48, 64, 0.8);
+          }
+        }
+      }
+    }
+  }
+
